--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+	
     <head>
+	    <title>EMEA team</title>
         <link rel="stylesheet" href="style.css">
 	</head>
     <body>
